@@ -2,6 +2,6 @@
 UTM_ZONE_NUMBER = 13
 
 [LOCATION]
-CITY = Boulder
+CITY = Denver
 STATE = CO
-GRID_LENGTH_IN_MTR = 5 
+GRID_LENGTH_IN_MTR = 10 
