@@ -3,7 +3,7 @@
 import json, redis, csv
 
 OUTPUT_FILE = 'output.json'
-OUTPUT_CSV = 'boulder.csv'
+OUTPUT_CSV = 'denver.csv'
 REDIS_SERVER = "localhost"
 
 
@@ -16,10 +16,13 @@ def write_as_json(tweet_count_dict):
 
 def initiate_redis_DB(tweet_count_dict, reset_db):
 	r_server = redis.Redis(REDIS_SERVER)
+	# note this code only gets executed if the user input is 1 for reset
 	if (reset_db == 1):
 		r_server.flushdb()
-		for key in tweet_count_dict:
-			r_server.set(list(key), 0)
+		# Remove the grid as a dictionary primer
+		if false:
+			for key in tweet_count_dict:
+				r_server.set(list(key), 0)
 	return r_server
 
 def save_redis_DB_to_disk(r_server):
@@ -27,15 +30,38 @@ def save_redis_DB_to_disk(r_server):
 	return
 
 
+def save_raw_to_csv(tws):
+	with open(OUTPUT_CSV, 'w') as fp:
+		w = csv.writer(fp, delimiter=',')
+		data = [[ "User_id", "latitude", "longitude", "time_stamp"]]
+		for key in tws:
+			data.append(key)
+		w.writerows(data)
+	return
+
+
 def save_redis_DB_to_csv(r_server):
 	with open(OUTPUT_CSV, 'w') as fp:
 		w = csv.writer(fp, delimiter=',')
-		data = [[ "latitude", "longitude", "tweet_count"]]
+		#data = [[ "latitude", "longitude", "tweet_count"]]
+		# With the change in dictionary r_server will consist of uid, location, time
+		# each key will be a user
+		data = [[ "User_id", "latitude", "longitude", "time_stamp"]]
 		for key in r_server.keys():
-			longlat = json.loads(key) 
-			count = json.loads(r_server.get(key))
-			if (count > 0):
-				new_data = [longlat[1], longlat[0], count] 
-				data.append(new_data)
+			#longlat will NOT be the key in my modified dbase the user_id is tehe key and lat/long/time are values
+			#longlat = json.loads(key) 
+			user_id = json.loads(key)
+			#old count that only added to grid points that had values.  recall we initialized the database with the entire grid.
+			if False:
+				count = json.loads(r_server.get(key))
+				if (count > 0):
+					new_data = [longlat[1], longlat[0], count] 
+					data.append(new_data)
+			if True:
+				longlat = json.loads(r_server.get(key))
+				if (longlat >0):
+					print 'longlat', longlat, ' type =', type(longlat)
+					new_data = [user_id, longlat[1], longlat[0], longlat[2]]
+					data.append(new_data)
 		w.writerows(data)
 		return
